# topcodes-wasm-rs

./: .gitignore  Cargo.toml  README.md  index.html  main.js  package-lock.json  run.sh  topcodes.js
.github/workflows/: build.yml  deploy.yml  release.yml
assets/: index-52a34086.js  index-8bf9c0d5.css  index-d1784ab7.js  topcodes_wasm_bg-8d5f85f8.wasm  topcodes_wasm_bg-dab611e8.wasm
src/: lib.rs
tests/: web.rs
tests/assets/: to_bytes.py
www/: README.md  index.html  index.js  package-lock.json  package.json  vite.config.ts  webpack.config.ts
www/src/: main.ts  style.css
