[package]
name = "topcodes-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
topcodes = { git = "https://github.com/battesonb/topcodes-rs", version = "*"}
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlBodyElement",
  "Window"
]

[profile.release]
lto = true
